--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
+        <link rel="stylesheet" href="./assets/css/style.css" />
+        <link rel="stylesheet" href="./assets/css/secondary-style.css" />
         <title>Run Buddy</title>
     </head>
     <body>
@@ -28,6 +30,7 @@
                     <a href="#Reach-out">Reach Out</a>
                 </li>
             </ul>
+
         </nav>
     </header>
 
