--- a/index.html
+++ b/index.html
@@ -111,8 +111,44 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers">
-        <h2>Meet the Trainers</h2>
+    <section id="your-trainers" class="trainers">
+        <h2 class="section-title primary-border">
+            Meet the Trainers
+        </h2> 
+
+        <article class="trainer">
+            <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+            <div class="trainer-bio text-left">
+                <h3>Arron Stephens</h3>
+                <h4>Speed/ Strength</h4>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, recusandae atque illo reprehenderit autem rem voluptate esse? Quasi repellendus nihil aut veniam voluptas facilis esse expedita dicta, dolorem quod magni!
+                </p>
+            </div>
+        </article>
+        <!-- second trainer bio -->
+
+        <article class="trainer">
+            <div class="trainer-bio text-right">
+                <h3>Joanna Gill</h3>
+                <h4>Endurance</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi delectus rem earum a neque! Laboriosam deleniti aut numquam molestias eum, hic pariatur velit possimus dolores dolore dignissimos ab non tenetur!
+                </p>
+            </div>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+        </article>
+        <!-- third trainer bio -->
+        <article class="trainer">
+            <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+            <div class="trainer-bio text-left">
+                <h3>Harry "the Headband" Smith</h3>
+                <h4>Strength</h4>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellat alias mollitia. Magni, ducimus? Voluptatibus ad ut molestias quam amet quaerat doloremque et odio praesentium quisquam, ipsum soluta, pariatur eaque?
+                </p>
+            </div>
+        </article>
     </section>
           
     <!-- "reach out" section -->
