--- a/index.html
+++ b/index.html
@@ -154,6 +154,30 @@
     <!-- "reach out" section -->
     <section id="reach-out">
         <h2>Reach Out</h2>
+        <div class="contact-info">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13289.216981682031!2d-112.45555120976806!3d33.62335249310472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872b4fe4010d5527%3A0x34a523c7542ddaf7!2s18017%20W%20Caribbean%20Ln%2C%20Surprise%2C%20AZ%2085388!5e0!3m2!1sen!2sus!4v1658287066766!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                width="600"
+                height="400"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy">
+            </iframe>
+            <div>
+                <h3>Run Buddy</h3>
+                <p>
+                    any questions or concerns before signing up?
+                    <br />
+                    Let us know and we'll be happy to talk to you!
+                </p>
+                <address>
+                    55 Main street <br/>
+                    Some Town, Ca <br />
+                    12345<br />
+                    P: 555.RUN.BUDZ (555.786.2839)<br/>
+                    E: <a href="malito.info@runbuddy.io">info@funbuddy.io</a>
+                </address>
+            </div>
+        </div>
     </section>
 
     <!-- footer -->
