--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <link rel="stylesheet" href="./assets/css/style.css" />
-        <link rel="stylesheet" href="./assets/css/secondary-style.css" />
+        <!-- <link rel="stylesheet" href="./assets/css/secondary-style.css" /> -->
         <title>Run Buddy</title>
     </head>
     <body>
@@ -66,6 +66,7 @@
     </section>
 
     <!-- end hero -->
+
 
     <!-- hero/jumbotron-->
     <section>
@@ -183,9 +184,10 @@
     <!-- footer -->
 
     <footer>
+        
         <h2>❤️ Made with love by Run Buddy.</h2>
         <div>
-            <a href="#">Read Our Privacy Policy</a><br />
+            <a href="privacy-policy.html">Read Our Privacy Policy</a><br />
             &copy; 2019 Run Buddy, Inc.
         </div>
     </footer>
