--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -4,14 +4,14 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width-device-width, initial-scale=1.0" />
         <title>Privacy Policy - Run Buddy</title>
-        <link rel="stylesheet"  href="../assets/css/style.css" />
+        <link rel="stylesheet"  href="./assets/css/style.css" />
 
-        <link rel="stylesheet"  href="../assets/css/secondary-style.css" />
+        <link rel="stylesheet"  href="./assets/css/secondary-style.css" />
     <body>
         <header> 
             <h1>
                 <!-- Do this to all of the <a> elements in privacy-policy.html -->
-                <a href="./index.html#what-we-do">What We Do</a>
+                <a href="./index.html#run-buddy">RUN BUDDY</a>
              </h1>
             <nav>
                 <!-- Unordered list element -->
@@ -19,16 +19,16 @@
                     <!-- List item element-->
                     <li>
                         <!-- Anchor element -->
-                        <a href="./index.#what-we-do">What We Do</a>
+                        <a href="./index.html#what-we-do">What We Do</a>
                     </li>
                     <li>
-                        <a href="./index.#what-you-do">What You Do</a>
+                        <a href="./index.html#what-you-do">What You Do</a>
                     </li>
                     <li>
-                        <a href="#./index.your-trainers">Your Trainers</a>
+                        <a href="./index.html#your-trainers">Your Trainers</a>
                     </li>
                     <li>
-                        <a href="#./index.reach out">Reach Out</a>
+                        <a href="./index.html#reach out">Reach Out</a>
                     </li>
                 </ul>
             </nav>
@@ -463,7 +463,7 @@
         <footer>
           <h2>
               <div>
-                  <a href="#">Read Our Privacy Policy</a><br />
+                  <!-- <a href="#">Read Our Privacy Policy</a><br /> -->
                   &copy; 2019 Run Buddy, Inc.
               </div>❤️ Made with love by Run Buddy.</h2>
       </footer>
