--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         </nav>
     </header>
     <section class="hero">
+        <div class="hero-cta">
+            <h2>Start Building Habits.</h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum quibusdam aut aperiam illo, corrupti, saepe, ab dignissimos consectetur id soluta laboriosam cumque ex. Sint et culpa porro, a esse reiciendis.
+            </p>
+        </div>
         <div class="hero-form">
             <h3>Get Started Today</h3>
             <p>Fill out this form and one of our trainers will schedule a consult</p>
