--- a/index.html
+++ b/index.html
@@ -148,18 +148,18 @@
     </section>
 
     <!-- "meet the trainers" section -->
-    <section id="your-trainers" class="trainers">
+    <section id="your-trainers">
      <div class="flex-row">
         <h2 class="section-title primary-border">
             Meet the Trainers
         </h2> 
      </div>
-
+      <div class="trainers">
         <article class="trainer">
             <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-            <div class="trainer-bio text-left">
-                <h3>Arron Stephens</h3>
-                <h4>Speed/ Strength</h4>
+            <div class="trainer-bio ">
+                <h3 class="trainer-name">Arron Stephens</h3>
+                <h4 class="trainer-role">Speed/ Strength</h4>
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, recusandae atque illo reprehenderit autem rem voluptate esse? Quasi repellendus nihil aut veniam voluptas facilis esse expedita dicta, dolorem quod magni!
                 </p>
@@ -168,26 +168,27 @@
         <!-- second trainer bio -->
 
         <article class="trainer">
-            <div class="trainer-bio text-right">
-                <h3>Joanna Gill</h3>
-                <h4>Endurance</h4>
+            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+            <div class="trainer-bio">
+                <h3 class="trainer-name">Joanna Gill</h3>
+                <h4 class="trainer-role">Endurance</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi delectus rem earum a neque! Laboriosam deleniti aut numquam molestias eum, hic pariatur velit possimus dolores dolore dignissimos ab non tenetur!
-                </p>
+                </p>    
             </div>
-            <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
         </article>
         <!-- third trainer bio -->
         <article class="trainer">
             <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-            <div class="trainer-bio text-left">
-                <h3>Harry "the Headband" Smith</h3>
-                <h4>Strength</h4>
+            <div class="trainer-bio ">
+                <h3 class="trainer-name">Harry "the Headband" Smith</h3>
+                <h4 class="trainer-role">Strength</h4>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus repellat alias mollitia. Magni, ducimus? Voluptatibus ad ut molestias quam amet quaerat doloremque et odio praesentium quisquam, ipsum soluta, pariatur eaque?
                 </p>
             </div>
         </article>
+    </div> 
     </section>
           
     <!-- "reach out" section -->
